--- a/src/resources/styles.css
+++ b/src/resources/styles.css
@@ -58,6 +58,7 @@ header .header_logo_venue {
 
 header .header_logo_title {
   text-transform: uppercase;
+  color: #e67fac;
 }
 
 /*====================
@@ -243,19 +244,19 @@ footer .footer_copyright {
   padding: 70px 0px;
 }
 
-.discount_wrapper .discount_porcentage {
+.discount_wrapper .discount_percentage {
   padding-right: 100px;
 }
 
-.discount_wrapper .discount_porcentage span:nth-child(1) {
-  color: #ff4800;
+.discount_wrapper .discount_percentage span:nth-child(1) {
+  color: #e67fac;
   font-size: 125px;
   font-weight: 400;
   display: block;
   line-height: 120px;
 }
 
-.discount_wrapper .discount_porcentage span:nth-child(2) {
+.discount_wrapper .discount_percentage span:nth-child(2) {
   color: #2c2c2c;
   font-size: 50px;
   font-weight: 400;
