--- a/src/resources/styles.css
+++ b/src/resources/styles.css
@@ -304,14 +304,14 @@ footer .footer_copyright {
 }
 
 .pricing_wrapper .pricing_inner_wrapper {
-  border: 2px solid #ffa800;
+  border: 2px solid #578e5d;
   padding: 50px 20px;
 }
 
 .pricing_inner_wrapper .pricing_title {
   color: #ffffff;
   text-align: center;
-  border-bottom: 1px solid #ffa800;
+  border-bottom: 1px solid #578e5d;
   padding-bottom: 20px;
 }
 .pricing_inner_wrapper .pricing_title span:nth-child(1) {
